--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+    <script src="js/laadi_sisse.js"></script>
 </head>
-    
+     
 <body>
+    <div class="laadi"></div>
         <div class="info">
              <img class="info pull-center img-circle" src="https://pbs.twimg.com/profile_images/585769811050799104/u3Fbzgfu_400x400.png">
             <p>Oi oi oi Oi oi oi Oi oi oi Oi oi oi Oi oi oi Oi oi oi Oi oi oi Oi oi oi Oi oi oi Oi oi oi Oi oi oi Oi oi oi Oi oi oi Oi oi oi Oi oi oi Oi oi oi Oi oi oi Oi oi oi Oi oi oi Oi oi oi Oi oi oi Oi oi oi Oi oi oi Oi oi oi Oi oi oi Oi oi oi Oi oi oi Oi oi oi Oi oi oi Oi oi oi Oi oi oi Oi oi oi Oi oi oi Oi oi oi Oi oi oi Oi oi oi </p>
@@ -20,8 +22,8 @@
          <div class="jalus container clearfix">
            <p>© RICHARD ALJASTE <script>document.write(new Date().getFullYear());</script></p>
            <div class="sots">
-               <a href="" target="_blank"><i class="fa fa-twitter"></i></a>
-               <a href="" target="_blank"><i class="fa fa-github"></i></a>
+               <a href="https://twitter.com/RichardAAbramso" target="_blank"><i class="fa fa-twitter"></i></a>
+               <a href="https://github.com/ItsRichardRaz" target="_blank"><i class="fa fa-github"></i></a>
                <a href="mailto:richard@mycloud.ee" target="_blank"><i class="fa fa-inbox"></i></a>
            </div>
         </div>
