--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <meta name="author" content="Richard Aljaste">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     
+    <link rel="icon" href="img/favicon.png">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <script src="js/laadi_sisse.js"></script>
 </head>
@@ -16,8 +18,8 @@
 <body>
     <div class="laadi"></div>
         <div class="info">
-             <img class="info pull-center img-circle" src="https://pbs.twimg.com/profile_images/585769811050799104/u3Fbzgfu_400x400.png">
-            <p>Oi oi oi Oi oi oi Oi oi oi Oi oi oi Oi oi oi Oi oi oi Oi oi oi Oi oi oi Oi oi oi Oi oi oi Oi oi oi Oi oi oi Oi oi oi Oi oi oi Oi oi oi Oi oi oi Oi oi oi Oi oi oi Oi oi oi Oi oi oi Oi oi oi Oi oi oi Oi oi oi Oi oi oi Oi oi oi Oi oi oi Oi oi oi Oi oi oi Oi oi oi Oi oi oi Oi oi oi Oi oi oi Oi oi oi Oi oi oi Oi oi oi Oi oi oi </p>
+             <img class="info pull-center img-circle">
+            <p>Lihtne koolipoiss, kellele meeldib nokitseda lihtsate asjade kallal. Nagu see lihtne leht siin.</p><p> Ühtlasi uitab ta ringi fotomaailma spektrites, mille ehtsaks näiteks on seesama lihtne taust.. sellel samal lihtsal lehel.</p>
         </div>
          <div class="jalus container clearfix">
            <p>© RICHARD ALJASTE <script>document.write(new Date().getFullYear());</script></p>
