Sponsor + XHTML Comp. + Live Twitter profile img.
*Also smaller tweaks here and there

--- a/index.html
+++ b/index.html
@@ -3,14 +3,18 @@
 
 <head>
     <title>Richard Aljaste</title>
-    <meta charset="utf-8">
-    <meta name="author" content="Richard Aljaste">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <meta charset="utf-8" />
+    <meta name="author" content="Richard Aljaste" />
+    <meta name="description" content="Lihtsuses peitub võlu." />
+    <meta name="keywords" content="veebiarendaja, fotograaf, lihtne, richard aljaste, richard, aljaste, mycloud.ee, richardmediagroup, eesti, estonia, html, css, javascript, developer, simple" />
+    <meta name="robots" content="noarchive" />
+    <meta name="google" content="notranslate" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
 
-    <link rel="icon" href="img/favicon.png">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <link rel="icon" href="img/favicon.png" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" />
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <script src="js/laadi_sisse.js"></script>
@@ -22,19 +26,21 @@
     <div class="info">
         <img class="info pull-center img-circle">
         <p>Lihtne koolipoiss, kellele meeldib nokitseda lihtsate asjade kallal. Nagu see lihtne leht siin.</p>
-        <p class="tv" style="display: none"> Ühtlasi uitab ta ringi fotomaailma spektrites, mille ehtsaks näiteks on seesama lihtne taust.. sellel samal lihtsal lehel.</p>
+        <p class="tv" style="display: none">Ühtlasi uitab ta ringi fotomaailma spektrites, mille ehtsaks näiteks on seesama lihtne taust.. sellel samal lihtsal lehel.</p>
     </div>
     <div class="jalus container clearfix">
-        <p>© RICHARD ALJASTE
+        <p class="aut">© RICHARD ALJASTE
             <script>
                 document.write(new Date().getFullYear());
             </script>
         </p>
+        <a href="http://zone.ee" target="_blank"><img class="sponsor sp1"></a>
         <div class="sots">
             <a href="https://twitter.com/RichardAAbramso" target="_blank"><i class="fa fa-twitter"></i></a>
             <a href="https://github.com/ItsRichardRaz" target="_blank"><i class="fa fa-github"></i></a>
             <a href="mailto:richard@mycloud.ee" target="_blank"><i class="fa fa-inbox"></i></a>
         </div>
+        <a href="http://zone.ee" target="_blank"><img class="sponsor sp2"></a>
     </div>
 </body>
 
