--- a/index.html
+++ b/index.html
@@ -28,12 +28,13 @@
         <p class="tv" style="display: none">Ühtlasi uitab ta ringi fotomaailma spektrites, mille ehtsaks näiteks on seesama lihtne taust.. sellel samal lihtsal lehel.</p>
     </div>
     <div class="jalus container clearfix">
-        <p class="aut">© RICHARD ALJASTE
+        <p class="aut"><span class="ktekst">© RICHARD ALJASTE
             <script>
                 document.write(new Date().getFullYear());
             </script>
+            </span>
+        <a class="sponsor" href="http://zone.ee" target="_blank"><img class="sponsor sp1"></a>
         </p>
-        <a href="http://zone.ee" target="_blank"><img class="sponsor sp1"></a>
         <div class="sots">
             <a href="https://twitter.com/RichardAAbramso" target="_blank"><i class="fa fa-twitter"></i></a>
             <a href="https://github.com/ItsRichardRaz" target="_blank"><i class="fa fa-github"></i></a>
