Non-JS Browser comp.

--- a/index.html
+++ b/index.html
@@ -18,14 +18,20 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <script src="js/laadi_sisse.js"></script>
     <script src="js/i2sujuv.js"></script>
+    <script type="text/javascript">
+        document.getElementsByTagName('html')[0].className='jsOn';
+    </script>
 </head>
 
 <body>
-    <div class="laadi"></div>
+    <div class="laadi jahScript"></div>
     <div class="info">
         <img class="info pull-center img-circle">
         <p>Lihtne koolipoiss, kellele meeldib nokitseda lihtsate asjade kallal. Nagu see lihtne leht siin.</p>
         <p class="tv" style="display: none">Ühtlasi uitab ta ringi fotomaailma spektrites, mille ehtsaks näiteks on seesama lihtne taust.. sellel samal lihtsal lehel.</p>
+        <noscript>
+            <p>Ühtlasi uitab ta ringi fotomaailma spektrites, mille ehtsaks näiteks on seesama lihtne taust.. sellel samal lihtsal lehel.</p>
+        </noscript>
     </div>
     <div class="jalus container clearfix">
         <p class="aut"><span class="ktekst">© RICHARD ALJASTE
