Browser comp. fixes

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
 
     <link rel="icon" href="img/favicon.png" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" />
 
@@ -19,14 +19,14 @@
     <script src="js/laadi_sisse.js"></script>
     <script src="js/i2sujuv.js"></script>
     <script type="text/javascript">
-        document.getElementsByTagName('html')[0].className='jsOn';
+        document.getElementsByTagName('html')[0].className = 'jsOn';
     </script>
 </head>
 
 <body>
     <div class="laadi jahScript"></div>
     <div class="info">
-        <img class="info pull-center img-circle">
+        <img class="info pull-center img-circle" src="http://res.cloudinary.com/demo/image/twitter_name/RichardAAbramso.jpg">
         <p>Lihtne koolipoiss, kellele meeldib nokitseda lihtsate asjade kallal. Nagu see lihtne leht siin.</p>
         <p class="tv" style="display: none">Ühtlasi uitab ta ringi fotomaailma spektrites, mille ehtsaks näiteks on seesama lihtne taust.. sellel samal lihtsal lehel.</p>
         <noscript>
@@ -39,7 +39,7 @@
                 document.write(new Date().getFullYear());
             </script>
             </span>
-        <a class="sponsor" href="http://zone.ee" target="_blank"><img class="sponsor sp1"></a>
+            <a class="sponsor" href="http://zone.ee" target="_blank"><img class="sponsor sp1"></a>
         </p>
         <div class="sots">
             <a href="https://twitter.com/RichardAAbramso" target="_blank"><i class="fa fa-twitter"></i></a>
