--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
                 document.write(new Date().getFullYear());
             </script>
             </span>
-            <a class="sponsor" href="http://zone.ee" target="_blank"><img class="sponsor sp1"></a>
+            <a class="sponsor" href="http://zone.ee" target="_blank"><img class="sponsor sp1" src="img/zone-gray.png"></a>
         </p>
         <div class="sots">
             <a href="https://twitter.com/RichardAAbramso" target="_blank"><i class="fa fa-twitter"></i></a>
             <a href="https://github.com/ItsRichardRaz" target="_blank"><i class="fa fa-github"></i></a>
             <a href="mailto:richard@mycloud.ee" target="_blank"><i class="fa fa-inbox"></i></a>
         </div>
-        <a href="http://zone.ee" target="_blank"><img class="sponsor sp2"></a>
+        <a href="http://zone.ee" target="_blank"><img class="sponsor sp2" src="img/zone-gray.png"></a>
     </div>
 </body>
 
