*Fallback for when mailto isn't configured for client
*Not really a fallback, just displays the e-mail as an extra

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="sots">
             <a href="https://twitter.com/RichardAAbramso" target="_blank"><i class="fa fa-twitter"></i></a>
             <a href="https://github.com/ItsRichardRaz" target="_blank"><i class="fa fa-github"></i></a>
-            <a href="mailto:richard@mycloud.ee" target="_blank"><i class="fa fa-inbox"></i></a>
+            <a href="mailto:richard@mycloud.ee" target="_blank"><i class="fa fa-inbox" title="richard@mycloud.ee"></i></a>
         </div>
         <a href="http://zone.ee" target="_blank"><img class="sponsor sp2" src="img/zone-gray.png"></a>
     </div>
