--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <script src="js/laadi_sisse.js"></script>
     <script src="js/i2sujuv.js"></script>
+    <script src="js/sponsorFB.js"></script>
     <script type="text/javascript">
         document.getElementsByTagName('html')[0].className = 'jsOn';
     </script>
@@ -26,7 +27,7 @@
 <body>
     <div class="laadi jahScript"></div>
     <div class="info">
-        <img class="info pull-center img-circle" src="http://res.cloudinary.com/demo/image/twitter_name/RichardAAbramso.jpg">
+        <img class="info pull-center img-circle" src="http://res.cloudinary.com/demo/image/twitter_name/RichardAAbramso.jpg" />
         <p>Lihtne koolipoiss, kellele meeldib nokitseda lihtsate asjade kallal. Nagu see lihtne leht siin.</p>
         <p class="tv" style="display: none">Ühtlasi uitab ta ringi fotomaailma spektrites, mille ehtsaks näiteks on seesama lihtne taust.. sellel samal lihtsal lehel.</p>
         <noscript>
@@ -39,14 +40,14 @@
                 document.write(new Date().getFullYear());
             </script>
             </span>
-            <a class="sponsor" href="http://zone.ee" target="_blank"><img class="sponsor sp1" src="img/zone-gray.png"></a>
+            <a class="sponsor" href="http://zone.ee" target="_blank"><img class="sponsor sp1" src="img/zone-gray.png" onmouseover="hover(this);" onmouseout="unhover(this);" /></a>
         </p>
         <div class="sots">
             <a href="https://twitter.com/RichardAAbramso" target="_blank"><i class="fa fa-twitter"></i></a>
             <a href="https://github.com/ItsRichardRaz" target="_blank"><i class="fa fa-github"></i></a>
             <a href="mailto:richard@mycloud.ee" target="_blank"><i class="fa fa-inbox" title="richard@mycloud.ee"></i></a>
         </div>
-        <a href="http://zone.ee" target="_blank"><img class="sponsor sp2" src="img/zone-gray.png"></a>
+        <a href="http://zone.ee" target="_blank"><img class="sponsor sp2" src="img/zone-gray.png" onmouseover="hover(this);" onmouseout="unhover(this);" /></a>
     </div>
 </body>
 
