Favicon responsive + Smaller fixes

--- a/index.html
+++ b/index.html
@@ -10,15 +10,36 @@
     <meta name="google" content="notranslate" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
 
-    <link rel="icon" href="img/favicon.png" />
+    <meta name="msapplication-TileColor" content="#2d89ef">
+    <meta name="msapplication-TileImage" content="img/favicons/mstile-144x144.png">
+    <meta name="msapplication-config" content="img/favicons/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
+
+    <link rel="apple-touch-icon" sizes="57x57" href="img/favicons/apple-touch-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="img/favicons/apple-touch-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="img/favicons/apple-touch-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="img/favicons/apple-touch-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="img/favicons/apple-touch-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="img/favicons/apple-touch-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="img/favicons/apple-touch-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="img/favicons/apple-touch-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="img/favicons/apple-touch-icon-180x180.png">
+    <link rel="icon" type="image/png" href="img/favicons/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="img/favicons/android-chrome-192x192.png" sizes="192x192">
+    <link rel="icon" type="image/png" href="img/favicons/favicon-96x96.png" sizes="96x96">
+    <link rel="icon" type="image/png" href="img/favicons/favicon-16x16.png" sizes="16x16">
+    <link rel="manifest" href="img/favicons/manifest.json">
+    <link rel="mask-icon" href="img/favicons/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="img/favicons/favicon.ico">
+
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" />
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-    <script src="js/laadi_sisse.js"></script>
-    <script src="js/i2sujuv.js"></script>
-    <script src="js/sponsorFB.js"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+    <script type="text/javascript" src="js/laadi_sisse.js"></script>
+    <script type="text/javascript" src="js/i2sujuv.js"></script>
+    <script type="text/javascript" src="js/sponsorFB.js"></script>
     <script type="text/javascript">
         document.getElementsByTagName('html')[0].className = 'jsOn';
     </script>
@@ -27,14 +48,14 @@
 <body>
     <div class="laadi jahScript"></div>
     <div class="info">
-        <img class="info pull-center img-circle" src="http://res.cloudinary.com/demo/image/twitter_name/RichardAAbramso.jpg" />
+        <img class="info img-circle" src="http://res.cloudinary.com/demo/image/twitter_name/RichardAAbramso.jpg" />
         <p>Lihtne koolipoiss, kellele meeldib nokitseda lihtsate asjade kallal. Nagu see lihtne leht siin.</p>
         <p class="tv" style="display: none">Ühtlasi uitab ta ringi fotomaailma spektrites, mille ehtsaks näiteks on seesama lihtne taust.. sellel samal lihtsal lehel.</p>
         <noscript>
             <p>Ühtlasi uitab ta ringi fotomaailma spektrites, mille ehtsaks näiteks on seesama lihtne taust.. sellel samal lihtsal lehel.</p>
         </noscript>
     </div>
-    <div class="jalus container clearfix">
+    <div class="jalus">
         <p class="aut"><span class="ktekst">© RICHARD ALJASTE
             <script>
                 document.write(new Date().getFullYear());
