--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" />
 
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/laadi_sisse.js"></script>
     <script type="text/javascript" src="js/i2sujuv.js"></script>
-    <script type="text/javascript" src="js/sponsorFB.js"></script>
     <script type="text/javascript">
         document.getElementsByTagName('html')[0].className = 'jsOn';
     </script>
@@ -66,10 +66,14 @@
         <div class="sots">
             <a href="https://twitter.com/RichardAAbramso" target="_blank"><i class="fa fa-twitter"></i></a>
             <a href="https://github.com/ItsRichardRaz" target="_blank"><i class="fa fa-github"></i></a>
-            <a href="mailto:richard@mycloud.ee" target="_blank"><i class="fa fa-inbox" title="richard@mycloud.ee"></i></a>
+            <a href="mailto:richard@mycloud.ee" target="_blank"><i class="fa fa-inbox" data-toggle="tooltip" title="richard@mycloud.ee"></i></a>
         </div>
         <a href="http://zone.ee" target="_blank"><img class="sponsor sp2" src="img/zone-gray.png" onmouseover="hover(this);" onmouseout="unhover(this);" /></a>
     </div>
+    
+    <script type="text/javascript" src="js/tooltip.js"></script>
+    <script type="text/javascript" src="js/sponsorFB.js"></script>
+    
 </body>
 
 </html>
