--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
     <link rel="shortcut icon" href="img/favicons/favicon.ico">
 
     <link rel="stylesheet" type="text/css" href="css/style.css" />
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="css/Bootsrap.min.css" />
+    <link rel="stylesheet" href="css/font-awesome.min.css" />
 
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/jQuery.min.js"></script>
+    <script type="text/javascript" src="js/Bootstrap.min.js"></script>
     <script type="text/javascript" src="js/laadi_sisse.js"></script>
     <script type="text/javascript" src="js/i2sujuv.js"></script>
     <script type="text/javascript">
@@ -48,7 +48,7 @@
 <body>
     <div class="laadi jahScript"></div>
     <div class="info">
-        <img class="info img-circle" src="http://res.cloudinary.com/demo/image/twitter_name/RichardAAbramso.jpg" />
+        <img class="info img-circle" src="https://res.cloudinary.com/demo/image/twitter_name/RichardAAbramso.jpg" />
         <p>Lihtne koolipoiss, kellele meeldib nokitseda lihtsate asjade kallal. Nagu see lihtne leht siin.</p>
         <p class="tv" style="display: none">Ühtlasi uitab ta ringi fotomaailma spektrites, mille ehtsaks näiteks on seesama lihtne taust.. sellel samal lihtsal lehel.</p>
         <noscript>
@@ -68,7 +68,7 @@
             <a href="https://github.com/ItsRichardRaz" target="_blank"><i class="fa fa-github"></i></a>
             <a href="mailto:richard@mycloud.ee" target="_blank"><i class="fa fa-inbox" data-toggle="tooltip" title="richard@mycloud.ee"></i></a>
         </div>
-        <a href="http://zone.ee" target="_blank"><img class="sponsor sp2" src="img/zone-gray.png" onmouseover="hover(this);" onmouseout="unhover(this);" /></a>
+        <a href="https://zone.ee" target="_blank"><img class="sponsor sp2" src="img/zone-gray.png" onmouseover="hover(this);" onmouseout="unhover(this);" /></a>
     </div>
     
     <script type="text/javascript" src="js/tooltip.js"></script>
