--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     <link rel="shortcut icon" href="img/favicons/favicon.ico">
 
     <link rel="stylesheet" type="text/css" href="css/style.css" />
-    <link rel="stylesheet" href="css/Bootsrap.min.css" />
-    <link rel="stylesheet" href="css/font-awesome.min.css" />
+    <link rel="stylesheet" type="text/css" href="css/Bootsrap.min.css" />
+    <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css" />
 
     <script type="text/javascript" src="js/jQuery.min.js"></script>
     <script type="text/javascript" src="js/Bootstrap.min.js"></script>
@@ -48,7 +48,7 @@
 <body>
     <div class="laadi jahScript"></div>
     <div class="info">
-        <img class="info img-circle" src="https://res.cloudinary.com/demo/image/twitter_name/RichardAAbramso.jpg" />
+        <img class="info img-circle" src="https://res.cloudinary.com/demo/image/twitter_name/w_140/RichardAAbramso.jpg" />
         <p>Lihtne koolipoiss, kellele meeldib nokitseda lihtsate asjade kallal. Nagu see lihtne leht siin.</p>
         <p class="tv" style="display: none">Ühtlasi uitab ta ringi fotomaailma spektrites, mille ehtsaks näiteks on seesama lihtne taust.. sellel samal lihtsal lehel.</p>
         <noscript>
