--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div class="laadi jahScript"></div>
     <div class="info">
         <img class="info img-circle" src="https://res.cloudinary.com/demo/image/twitter_name/w_140/RichardAAbramso.jpg" />
-        <p>Lihtne koolipoiss, kellele meeldib nokitseda lihtsate asjade kallal. Nagu see lihtne leht siin.</p>
+        <p>Lihtne poiss, kellele meeldib nokitseda lihtsate asjade kallal. Nagu see lihtne leht siin.</p>
         <p class="tv" style="display: none">Ühtlasi uitab ta ringi fotomaailma spektrites, mille ehtsaks näiteks on seesama lihtne taust.. sellel samal lihtsal lehel.</p>
         <noscript>
             <p>Ühtlasi uitab ta ringi fotomaailma spektrites, mille ehtsaks näiteks on seesama lihtne taust.. sellel samal lihtsal lehel.</p>
@@ -66,7 +66,7 @@
         <div class="sots">
             <a href="https://twitter.com/RichardAAbramso" target="_blank"><i class="fa fa-twitter"></i></a>
             <a href="https://github.com/ItsRichardRaz" target="_blank"><i class="fa fa-github"></i></a>
-            <a href="mailto:richard@mycloud.ee" target="_blank"><i class="fa fa-inbox" data-toggle="tooltip" title="richard@mycloud.ee"></i></a>
+            <a href="mailto:&#114;&#105;&#099;&#104;&#097;&#114;&#100;&#064;&#109;&#121;&#099;&#108;&#111;&#117;&#100;&#046;&#101;&#101;" target="_blank"><i class="fa fa-inbox" data-toggle="tooltip" title="richard@mycloud.ee"></i></a>
         </div>
         <a href="https://zone.ee" target="_blank"><img class="sponsor sp2" src="img/zone-gray.png" onmouseover="hover(this);" onmouseout="unhover(this);" /></a>
     </div>
