--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <div class="laadi jahScript"></div>
     <div class="info">
         <img class="info img-circle" src="https://res.cloudinary.com/demo/image/twitter_name/w_140/RichardAAbramso.jpg" />
-        <p>Lihtne poiss, kellele meeldib nokitseda lihtsate asjade kallal. Nagu see lihtne leht siin.</p>
+        <p>Lihtne poiss, kellele meeldib nokitseda lihtsate asjade kallal. Nagu see lihtne leht siin..</p>
         <p class="tv" style="display: none">Ühtlasi uitab ta ringi fotomaailma spektrites, mille ehtsaks näiteks on seesama lihtne taust.. sellel samal lihtsal lehel.</p>
         <noscript>
             <p>Ühtlasi uitab ta ringi fotomaailma spektrites, mille ehtsaks näiteks on seesama lihtne taust.. sellel samal lihtsal lehel.</p>
