--- a/404.html
+++ b/404.html
@@ -32,7 +32,7 @@ permalink: /404.html
 <body>
     <link href="https://richard.ee/css/style.css" rel="stylesheet" type="text/css" />
     <div style="height: 100%; width: 100%; background-color: rgba(0, 0, 0, 0.8);">
-    <h1>Oopsie! richard.ee<a id="dir"></a> was not found :o!</h1>
+    <h1>Oopsie! richard.ee<a id="dir"></a><noscript>*</noscript> was not found :o!</h1>
 <h2>404</h2>
 </div>
 </body>
