Loader noscript fix

--- a/index.html
+++ b/index.html
@@ -40,6 +40,15 @@
     <script type="text/javascript" src="js/Bootstrap.min.js"></script>
     <script type="text/javascript" src="js/laadi_sisse.js"></script>
     <script type="text/javascript" src="js/i2sujuv.js"></script>
+    
+    <noscript>
+        <style> 
+            .laadi {
+                display: none; 
+            } 
+        </style>
+    </noscript>
+    
 </head>
 
 <body>
