Undo until a better solution appears

--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
     <script type="text/javascript" src="js/jQuery.min.js"></script>
     <script type="text/javascript" src="js/Bootstrap.min.js"></script>
     <script type="text/javascript" src="js/i2sujuv.js"></script>
-    <script type="text/javascript" src="js/hover.js"></script>
 
     <noscript>
         <style>
@@ -62,14 +61,14 @@
         </noscript>
     </div>
     <div class="jalus">
-        <p class="aut hover"><span class="ktekst">© RICHARD ALJASTE
+        <p class="aut"><span class="ktekst">© RICHARD ALJASTE
             <script>
                 document.write(new Date().getFullYear());
             </script>
             </span>
             <a class="sponsor" href="http://zone.ee" target="_blank"><img class="sponsor sp1" src="img/zone-gray.png" onmouseover="hover(this); focus(this);" onmouseout="unhover(this); blur(this);" /></a>
         </p>
-        <div class="sots hover">
+        <div class="sots">
             <a href="https://twitter.com/RichardAAbramso" target="_blank"><i class="fa fa-twitter"></i></a>
             <a href="https://github.com/ItsRichardRaz" target="_blank"><i class="fa fa-github"></i></a>
             <a href="mailto:&#114;&#105;&#099;&#104;&#097;&#114;&#100;&#064;&#109;&#121;&#099;&#108;&#111;&#117;&#100;&#046;&#101;&#101;" target="_blank"><i class="fa fa-inbox" data-toggle="tooltip" title="richard@mycloud.ee"></i></a>
