--- a/index.html
+++ b/index.html
@@ -66,18 +66,17 @@
                 document.write(new Date().getFullYear());
             </script>
             </span>
-            <a class="sponsor" href="http://zone.ee" target="_blank"><img class="sponsor sp1" src="img/zone-gray.png" onmouseover="hover(this); focus(this);" onmouseout="unhover(this); blur(this);" /></a>
+            <a class="sponsor" href="http://zone.ee" target="_blank"><img class="sponsor sp1" src="img/zone-gray.png"/></a>
         </p>
         <div class="sots">
             <a href="https://twitter.com/RichardAAbramso" target="_blank"><i class="fa fa-twitter"></i></a>
             <a href="https://github.com/ItsRichardRaz" target="_blank"><i class="fa fa-github"></i></a>
             <a href="mailto:&#114;&#105;&#099;&#104;&#097;&#114;&#100;&#064;&#109;&#121;&#099;&#108;&#111;&#117;&#100;&#046;&#101;&#101;" target="_blank"><i class="fa fa-inbox" data-toggle="tooltip" title="richard@mycloud.ee"></i></a>
         </div>
-        <a href="https://zone.ee" target="_blank"><img class="sponsor sp2" src="img/zone-gray.png" onmouseover="hover(this); focus(this);" onmouseout="unhover(this); blur(this);" /></a>
+        <a href="https://zone.ee" target="_blank"><img class="sponsor sp2" src="img/zone-gray.png"/></a>
     </div>
 
     <script type="text/javascript" src="js/tooltip.js"></script>
-    <script type="text/javascript" src="js/sponsorFB.js"></script>
     <script type="text/javascript" src="js/laadi_sisse.js"></script>
 
 </body>
