--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <body>
     <div class="laadi"></div>
     <div class="info">
-        <img class="info img-circle" src="https://res.cloudinary.com/demo/image/twitter_name/w_140/RichardAAbramso.jpg" />
+        <img class="info img-circle" src="https://res.cloudinary.com/demo/image/twitter_name/w_140/_teapot418.jpg" />
         <p>Lihtne poiss, kellele meeldib nokitseda lihtsate asjade kallal. Nagu see lihtne leht siin.</p>
         <p class="tv" style="display: none">Ühtlasi uitab ta ringi fotomaailma spektrites, mille ehtsaks näiteks on seesama lihtne taust.. sellel samal lihtsal lehel.</p>
         <noscript>
@@ -66,10 +66,10 @@
                 document.write(new Date().getFullYear());
             </script>
             </span>
-            <a class="sponsor" href="http://zone.ee" target="_blank"><img class="sponsor sp1" src="img/zone-gray.png"/></a>
+            <a href="http://zone.ee" target="_blank"><img class="sponsor sp1" src="img/zone-gray.png"/></a>
         </p>
         <div class="sots">
-            <a href="https://twitter.com/RichardAAbramso" target="_blank"><i class="fa fa-twitter"></i></a>
+            <a href="https://twitter.com/_teapot418" target="_blank"><i class="fa fa-twitter"></i></a>
             <a href="https://github.com/ItsRichardRaz" target="_blank"><i class="fa fa-github"></i></a>
             <a href="mailto:&#114;&#105;&#099;&#104;&#097;&#114;&#100;&#064;&#109;&#121;&#099;&#108;&#111;&#117;&#100;&#046;&#101;&#101;" target="_blank"><i class="fa fa-inbox" data-toggle="tooltip" title="richard@mycloud.ee"></i></a>
         </div>
