Get DP using Twitter method (Cloudinary not working atm.)

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <body>
     <div class="laadi"></div>
     <div class="info">
-        <img class="info img-circle" src="https://res.cloudinary.com/demo/image/twitter_name/w_140/1600574594.jpg" />
+        <img class="info img-circle" src="https://twitter.com/_teapot418/profile_image?size=original" />
         <p>Lihtne poiss, kellele meeldib nokitseda lihtsate asjade kallal. Nagu see lihtne leht siin.</p>
         <p class="tv" style="display: none">Ühtlasi uitab ta ringi fotomaailma spektrites, mille ehtsaks näiteks on seesama lihtne taust.. sellel samal lihtsal lehel.</p>
         <noscript>
