DP from local dir

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <body>
     <div class="laadi"></div>
     <div class="info">
-        <img class="info img-circle" src="https://scontent-arn2-1.cdninstagram.com/t51.2885-19/13743578_1061925973893750_1150958433_a.jpg" />
+        <img class="info img-circle" src="img/portrait.jpg" />
         <p>Lihtne poiss, kellele meeldib nokitseda lihtsate asjade kallal. Nagu see lihtne leht siin.</p>
         <p class="tv" style="display: none">Ühtlasi uitab ta ringi fotomaailma spektrites, mille ehtsaks näiteks on seesama lihtne taust.. sellel samal lihtsal lehel.</p>
         <noscript>
