Pic from github

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <body>
     <div class="laadi"></div>
     <div class="info">
-        <img class="info img-circle" src="img/portrait.jpg" />
+        <img class="info img-circle" src="https://avatars.githubusercontent.com/ItsRichardRaz" />
         <p>Lihtne poiss, kellele meeldib nokitseda lihtsate asjade kallal. Nagu see lihtne leht siin.</p>
         <p class="tv" style="display: none">Ühtlasi uitab ta ringi fotomaailma spektrites, mille ehtsaks näiteks on seesama lihtne taust.. sellel samal lihtsal lehel.</p>
         <noscript>
