--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <div class="laadi"></div>
     <div class="info">
         <img class="info img-circle" src="https://avatars.githubusercontent.com/ItsRichardRaz" />
-        <p>Lihtne poiss, kellele meeldib nokitseda lihtsate asjade kallal. Nagu see lihtne leht siin.</p>
+        <p>Lihtne poiss, kellele meeldib nokitseda lihtsate asjade kallal.</p>
         <p class="tv" style="display: none">Ühtlasi uitab ta ringi fotomaailma spektrites, mille ehtsaks näiteks on seesama lihtne taust.. sellel samal lihtsal lehel.</p>
         <noscript>
             <p>Ühtlasi uitab ta ringi fotomaailma spektrites, mille ehtsaks näiteks on seesama lihtne taust.. sellel samal lihtsal lehel.</p>
@@ -66,13 +66,13 @@
                 document.write(new Date().getFullYear());
             </script>
             </span>
-            <a href="http://richardmediagroup.eu" target="_blank"><img class="sponsor sp1" src="img/rmgroup-gray.png"/></a>
+            <a class="sponsor" href="http://richardmediagroup.eu" target="_blank"><img class="sponsor sp1" src="img/rmgroup-gray.png"/></a>
         </p>
         <div class="sots">
             <a href="https://github.com/ItsRichardRaz" target="_blank"><i class="fa fa-github"></i></a>
             <a href="mailto:&#114;&#105;&#099;&#104;&#097;&#114;&#100;&#064;&#109;&#121;&#099;&#108;&#111;&#117;&#100;&#046;&#101;&#101;" target="_blank"><i class="fa fa-inbox" data-toggle="tooltip" title="richard@mycloud.ee"></i></a>
         </div>
-        <a href="https://richardmediagroup.eu" target="_blank"><img class="sponsor sp2" src="img/rmgroup-gray.png"/></a>
+        <a class="sponsor" href="https://richardmediagroup.eu" target="_blank"><img class="sponsor sp2" src="img/rmgroup-gray.png"/></a>
     </div>
 
     <script type="text/javascript" src="js/tooltip.js"></script>
