Removed the useless (also caused glitches on load)

--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
                 document.write(new Date().getFullYear());
             </script>
             </span>
-            <a class="sponsor" href="http://richardmediagroup.eu" target="_blank"><img class="sponsor sp1" src="img/rmgroup-gray.png"/></a>
+            <a class="sponsor sp1" href="http://richardmediagroup.eu" target="_blank"></a>
         </p>
         <div class="sots">
             <a href="https://github.com/ItsRichardRaz" target="_blank"><i class="fa fa-github"></i></a>
             <a href="mailto:&#114;&#105;&#099;&#104;&#097;&#114;&#100;&#064;&#109;&#121;&#099;&#108;&#111;&#117;&#100;&#046;&#101;&#101;" target="_blank"><i class="fa fa-inbox" data-toggle="tooltip" title="richard@mycloud.ee"></i></a>
         </div>
-        <a class="sponsor" href="https://richardmediagroup.eu" target="_blank"><img class="sponsor sp2" src="img/rmgroup-gray.png"/></a>
+        <a class="sponsor sp2" href="https://richardmediagroup.eu" target="_blank"></a>
     </div>
 
     <script type="text/javascript" src="js/tooltip.js"></script>
